Html - Refont de la sctructure

--- a/views/pug/index.pug
+++ b/views/pug/index.pug
@@ -6,18 +6,19 @@ html
     title Portfolio
     link(href= "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css", rel="stylesheet", integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u", crossorigin="anonymous")
     link(href='build/css/ionicons.min.css', rel='stylesheet', type='text/css')
-    link(href='build/onepage-scroll/onepage-scroll.css')
+    //link(href='build/onepage-scroll/onepage-scroll.css')
     link(href='build/css/style.css', rel='stylesheet', type='text/css')
-    script(src='build/js/jquery-2.2.4.js')
-    script(src='https://code.jquery.com/ui/1.12.0/jquery-ui.js')
-    script(src='build/js/script.js')
-    script(src='build/onepage-scroll/jquery.onepage-scroll.min.js')
-    script(src='node_modules/progressbar.js/progressbar.min.js')
+    //script(src='build/js/jquery-2.2.4.js')
+    //script(src='https://code.jquery.com/ui/1.12.0/jquery-ui.js')
+    //script(src='build/js/script.js')
+    //script(src='build/js/callinjson.js')
+    //script(src='build/onepage-scroll/jquery.onepage-scroll.min.js')
+    //script(src='node_modules/progressbar.js/progressbar.min.js')
   body
 <!--     .wappers.row -->
 
         header.container-fluid
-          nav.navbar.navbar-default.navbar-fixed-top
+          //nav.navbar.navbar-default.navbar-fixed-top
             .container-fluid
               ul.nav.navbar-nav
                   -var list = {"home":"#home", "about me":"#about", "skill":"#skill", "contact":"#contact"}
@@ -26,11 +27,16 @@ html
 
         section#home.container-fluid
           .row
-            .intro_me.col-xs-12
-                h1.col-lg-12.text-center.col-xs-12 Ronald</br>Marcel
-                h3.col-lg-12.text-center.col-xs-12 Product Designer </br> Developper Front-End
-                p.intro.col-lg-12.text-center.col-xs-12 Hello! My name is Pierre Nel, and I'm a London-based freelancer. If I'm not freelancing at some of London's finest digital agencies, I'm working remotely on projects for clients all over the world.<br>I have a diverse set of skills, ranging from design, to HTML + CSS + Javascript, all the way to PHP, custom Drupal module development and Linux server administration.
-                ul.social.col-lg-12.col-xs-12
+            .profil.col-xs-12
+                .round_outter
+                  .round_inner
+                    .portrait
+                .aboutme
+                  span.whoiam.col-lg-12.text-center.col-xs-12 Ronald Marcel
+                  span.role.col-lg-12.text-center.col-xs-12 Front End Developer and Product Designer junior based in Brittany.
+                //p.intro.col-lg-12.text-center.col-xs-12 Hello! My name is Pierre Nel, and I'm a London-based freelancer. If I'm not freelancing at some of London's finest digital agencies, I'm working remotely on projects for clients all over the world.<br>I have a diverse set of skills, ranging from design, to HTML + CSS + Javascript, all the way to PHP, custom Drupal module development and Linux server administration.
+
+                //ul.social.col-lg-12.col-xs-12
                     li.col-lg-2.col-lg-offset-2.col-xs-3
                         a.icon.ion-social-github(href="#")
                     li.col-lg-2.col-xs-3
@@ -40,222 +46,7 @@ html
                     li.col-lg-2.col-xs-3
                         a.icon.ion-social-googleplus(href="#")
 
-                ul.menu.col-lg-12.text-center
+                //ul.menu.col-lg-12.text-center
                     -var list = {"home":"#home", "about me":"#about", "skill":"#skill", "contact":"#contact"}
                     each link, item in list
                         li.text-capitalize.col-lg-12.col-xs-12: a(href= link) #{item}
-
-            .intro_bottom.col-lg-12.col-xs-12
-                .bt#coder.text-capitalize coder
-                .bt#designer.text-capitalize designer
-
-        section#development.container-fluid
-          .row
-
-
-        section#design.container-fluid
-          .row
-            .designer_gallery.container-fluid
-                .navlist_right.col-lg-2.col-lg-offset-10
-                    ul.right.nav.nav-pills
-                        li all
-                        li website
-                        li app
-                .gallery.col-lg-10.col-lg-offset-1
-                    .block.col-lg-3
-                        .box.box_large.col-lg-12
-                            .box_img.box_img_large
-                                img(src='ressources/img/13.jpg')
-                            .desc
-                                .title_project.col-lg-12
-                                    h4 Projet 1
-                                .details.col-lg-12
-                                    p.btn-tech html
-                                    p.btn-tech css3
-                                    p.btn-tech js
-                        .box.box_small.col-lg-12
-                            .box_img.box_img_small
-                                img(src='ressources/img/13.jpg')
-                            .desc
-                                .title_project.col-lg-12
-                                    h4 Projet 1
-                                .details.col-lg-12
-                                    p.btn-tech html
-                                    p.btn-tech css3
-                                    p.btn-tech js
-
-                    .block.col-lg-3
-                        .box.box_small.col-lg-12
-                            .box_img.box_img_small
-                                img(src='ressources/img/13.jpg')
-                            .desc
-                                .title_project.col-lg-12
-                                    h4 Projet 1
-                                .details.col-lg-12
-                                    p.btn-tech html
-                                    p.btn-tech css3
-                                    p.btn-tech js
-                        .box.box_large.col-lg-12
-                            .box_img.box_img_large
-                                img(src='ressources/img/13.jpg')
-                            .desc
-                                .title_project.col-lg-12
-                                    h4 Projet 1
-                                .details.col-lg-12
-                                    p.btn-tech html
-                                    p.btn-tech css3
-                                    p.btn-tech js
-
-                    .block.col-lg-3
-                        .box.box_large.col-lg-12
-                            .box_img.box_img_large
-                                img(src='ressources/img/13.jpg')
-                            .desc
-                                .title_project.col-lg-12
-                                    h4 Projet 1
-                                .details.col-lg-12
-                                    p.btn-tech html
-                                    p.btn-tech css3
-                                    p.btn-tech js
-                        .box.box_small.col-lg-12
-                            .box_img.box_img_small
-                                img(src='ressources/img/13.jpg')
-                            .desc
-                                .title_project.col-lg-12
-                                    h4 Projet 1
-                                .details.col-lg-12
-                                    p.btn-tech html
-                                    p.btn-tech css3
-                                    p.btn-tech js
-
-                    .block.col-lg-3
-                        .box.box_small.col-lg-12
-                            .box_img.box_img_small
-                                img(src='ressources/img/13.jpg')
-                            .desc
-                                .title_project.col-lg-12
-                                    h4 Projet 1
-                                .details.col-lg-12
-                                    p.btn-tech html
-                                    p.btn-tech css3
-                                    p.btn-tech js
-                        .box.box_large.col-lg-12
-                            .box_img.box_img_large
-                                img(src='ressources/img/13.jpg')
-                            .desc
-                                .title_project.col-lg-12
-                                    h4 Projet 1
-                                .details.col-lg-12
-                                    p.btn-tech html
-                                    p.btn-tech css3
-                                    p.btn-tech js
-                .close_gallery.col-lg-4.col-lg-offset-4.text-center
-                    p close
-
-        section#about.container-fluid
-          .row
-            .box_intro.col-lg-4
-                .col-lg-12
-                    p.introduction “ Salut, je m'appel<span style="color:#109f9a;"> Ronald Marcel</span>, un <span style="color:#109f9a;">Designer Industriel</span>/<span style="color:#109f9a;">Developper Front-End</span>.”
-                    .block_text
-                        p.text Je m'appelle Eic Huguenin, je suis développeur front-end à Paris. J'aide les agences et les startups à concevoir et développer des expériences interactives. Développeur front-end depuis 5ans, je n'ai pour but que de satisfaire mes clients en créant des sites interactifs dignes de ce nom.
-        section#skill.container-fluid
-            .row
-                .message_skill.col-lg-4.col-lg-offset-4
-                    p  “ J'ai compétence dans la conception et la création de projet Design Industriel, ainsi que le developpement et la maintenance de site Web. “
-
-                .box_progress.col-lg-4.col-lg-offset-4
-                    #progressbar.col-lg-12
-                        .skillbar.clearfix(data-percent='60%')
-                          .skillbar-title(style='background: #F5F5F5;')
-                            span HTML5
-                          .skillbar-bar(style='background: #ED5C65;')
-                          .skill-bar-percent 60%
-                    #progressbar.col-lg-12
-                        .skillbar.clearfix(data-percent='50%')
-                          .skillbar-title(style='background: #F5F5F5;')
-                            span CSS3
-                          .skillbar-bar(style='background: #ED5C65;')
-                          .skill-bar-percent 50%
-                    #progressbar.col-lg-12
-                        .skillbar.clearfix(data-percent='50%')
-                          .skillbar-title(style='background: #F5F5F5;')
-                            span JS
-                          .skillbar-bar(style='background: #ED5C65;')
-                          .skill-bar-percent 50%
-                    #progressbar.col-lg-12
-                        .skillbar.clearfix(data-percent='50%')
-                          .skillbar-title(style='background: #F5F5F5;')
-                            span Jquery
-                          .skillbar-bar(style='background: #ED5C65;')
-                          .skill-bar-percent 50%
-                    #progressbar.col-lg-12
-                        .skillbar.clearfix(data-percent='30%')
-                          .skillbar-title(style='background: #F5F5F5;')
-                            span ReactJs
-                          .skillbar-bar(style='background: #ED5C65;')
-                          .skill-bar-percent 30%
-                    #progressbar.col-lg-12
-                        .skillbar.clearfix(data-percent='70%')
-                          .skillbar-title(style='background: #F5F5F5;')
-                            span JadeJs/Pug
-                          .skillbar-bar(style='background: #ED5C65;')
-                          .skill-bar-percent 70%
-                    #progressbar.col-lg-12
-                        .skillbar.clearfix(data-percent='30%')
-                          .skillbar-title(style='background: #F5F5F5;')
-                            span PHP
-                          .skillbar-bar(style='background: #ED5C65;')
-                          .skill-bar-percent 30%
-        section#contact.container-fluid
-          .row
-            .formcontact.col-lg-12.col-xs-12
-                .box_contact.col-lg-4.col-lg-offset-4.col-xs-12
-                    address.coordonnee.col-lg-12.col-xs-12
-                            p.message Vous avez un projet, besoin d'un conseil ou tout simplement une question à me poser ?
-                            p ronaldmarcel[<span style ="color:#109f9a">at</span>]ronaldmarcel.com
-                            button.bt Une requête ?
-                    form.form.col-lg-12.col-xs-12(action="send/email.php" method="post")
-                        .title
-                            p.send Envoyer
-                        .form-group
-                            input.form_input(name="name" type="text" placeholder="Votre nom")
-                        .form-group
-                            input.form_input(name="email" type="email" placeholder="Votre adresse mail")
-                        .form-group
-                            input.form_input(name="objet" type="text" placeholder="Le sujet de votre message")
-                        .form-group
-                            textarea.form_input(name="content" rows="5" placeholder="Votre message")
-        footer.container-fluid
-            .row
-                    .block_footer
-                        ul.col-lg-12.col-xs-12
-                            li Suivez moi sur
-                            li
-                                a(href="#")
-                                    span.title_so.icon.ion-social-github
-                                        span Github
-                            li
-                                a(href="#")
-                                    span.title_so.icon.ion-social-twitter
-                                        span Twitter
-                            li
-                                a(href="#")
-                                    span.title_so.icon.ion-social-linkedin
-                                        span Linkedin
-                            li
-                                a(href="#")
-                                    span.title_so.icon.ion-social-googleplus
-                                        span Google Plus
-                            li.bt_title envoyer moi un email sur
-                            li ronaldmarcel[@]ronaldmarcel.com
-        //script.
-            $(document).ready(function(){
-                $.scrollify({
-                        section : "section",
-                });
-                $("button").click(function(){
-                    $(".box_contact").find("form").fadeIn(1000),
-                    $(".box_contact").find("address").fadeOut(100);
-                    });
-            });
